Make the active hex borders a bit less obnoxious. Make faction info wider, to fix some firefox layout issues

--- a/stc/style.css
+++ b/stc/style.css
@@ -31,7 +31,7 @@ div.faction-board {
 
 div.faction-info {
     float: left;
-    width: 300px;
+    width: 350px;
 }
 
 div.shared-actions {
